adjustments CSS and search input alignment and positioning

--- a/src/stylesheets/_colors.scss
+++ b/src/stylesheets/_colors.scss
@@ -10,6 +10,7 @@ $grey: #dadada;
 $grey-light: #eee;
 $grey-lightest: #fafafa;
 $grey-even-darker: #d7d7d7;
+$grey-lightgrey: #D3D3D3;
 
 $white: #fff;
 $black: #000;
